Implement eslint-plugin-astro

--- a/.gitignore
+++ b/.gitignore
@@ -41,9 +41,6 @@ build/Release
 node_modules/
 jspm_packages/
 
-# TypeScript v1 declaration files
-typings/
-
 # TypeScript cache
 *.tsbuildinfo
 
@@ -102,3 +99,6 @@ dist
 
 # TernJS port file
 .tern-port
+
+## repo
+/lib
