--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "npm run build:ts",
     "build:ts": "tsc --project ./tsconfig.build.json",
     "clean": "rimraf lib .nyc_output dist coverage",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --require ts-node/register \"tests/src/**/*.ts\" --reporter dot --timeout 60000",
+    "cover": "nyc --reporter=lcov npm run test",
+    "debug": "mocha --require ts-node/register/transpile-only \"tests/src/**/*.ts\" --reporter dot --timeout 60000",
     "lint": "eslint .",
     "eslint-fix": "eslint . --fix",
     "update": "ts-node --transpile-only ./tools/update.ts && npm run format-for-gen-file",
@@ -48,10 +50,12 @@
   "devDependencies": {
     "@ota-meshi/eslint-plugin": "^0.9.0",
     "@types/eslint": "^8.4.2",
+    "@types/eslint-scope": "^3.7.3",
     "@types/estree": "0.0.51",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.35",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
+    "@typescript-eslint/parser": "^5.25.0",
     "astro-eslint-parser": "^0.1.0",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
@@ -65,6 +69,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-regexp": "^1.0.0",
     "eslint-plugin-yml": "^1.0.0",
+    "mocha": "^10.0.0",
+    "nyc": "^15.1.0",
     "prettier": "^2.6.2",
     "rimraf": "^3.0.2",
     "ts-node": "^10.7.0",
