--- a/.eslintignore
+++ b/.eslintignore
@@ -4,7 +4,13 @@
 /node_modules
 !/.vscode
 !/.github
-/prettier-playground
+/docs-build/src/md
+/docs-build/src/pages
+/docs-build/README.md
+/docs-build/dist
+/docs-build/shim/assert.mjs
+/docs-build/shim/eslint.mjs
+/docs-build/shim/astro-eslint-parser.mjs
 /tests/fixtures/rules/indent/invalid/ts
 /tests/fixtures/rules/indent/invalid/ts-v5
 /tests/fixtures/rules/valid-compile/invalid/ts
