--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,8 @@ dist
 
 ## repo
 /lib
+/docs-build/src/md
+/docs-build/src/pages
+/docs-build/shim/assert.mjs
+/docs-build/shim/eslint.mjs
+/docs-build/shim/astro-eslint-parser.mjs
