--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -1,6 +1,11 @@
 {
   "extends": "./tsconfig.json",
-  "exclude": ["tests/**/*", "tools/**/*", "typings/**/*"],
+  "exclude": [
+    "tests/**/*",
+    "tools/**/*",
+    "typings/**/*",
+    "docs-build/src/**/*"
+  ],
   "compilerOptions": {
     "removeComments": true /* Do not emit comments to output. */
   }
