--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.0",
   "description": "ESLint plugin for Astro component",
   "main": "lib/index.js",
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "prebuild": "npm run -s clean",
     "build": "npm run build:ts",
@@ -14,13 +17,15 @@
     "lint": "eslint .",
     "eslint-fix": "eslint . --fix",
     "update": "ts-node --transpile-only ./tools/update.ts && npm run format-for-gen-file",
-    "format-for-gen-file": "eslint src/types-for-node.ts src/utils/rules.ts src/configs --fix",
+    "format-for-gen-file": "eslint src/types-for-node.ts src/utils/rules.ts --fix",
     "new": "ts-node --transpile-only ./tools/new-rule.ts",
-    "docs:watch": "node --experimental-loader ./svelte-kit-import-hook.mjs node_modules/@sveltejs/kit/svelte-kit.js dev",
-    "docs:build": "node --experimental-loader ./svelte-kit-import-hook.mjs node_modules/@sveltejs/kit/svelte-kit.js build",
-    "docs:preview": "node --experimental-loader ./svelte-kit-import-hook.mjs node_modules/@sveltejs/kit/svelte-kit.js preview",
+    "docs:dev": "astro dev",
+    "docs:build": "astro build",
+    "docs:setup": "node ./docs-build/setup-docs.mjs",
+    "docs:preview": "astro preview",
     "preversion": "npm test && git add .",
-    "version": "env-cmd -e version npm run update && git add ."
+    "version": "env-cmd -e version npm run update && git add .",
+    "postinstall": "patch-package"
   },
   "repository": {
     "type": "git",
@@ -48,7 +53,13 @@
     "astro-eslint-parser": "^0.1.0"
   },
   "devDependencies": {
+    "@astrojs/preact": "^0.1.2",
+    "@astrojs/react": "^0.1.2",
+    "@astrojs/svelte": "^0.1.3",
+    "@docsearch/css": "^3.1.0",
+    "@docsearch/react": "^3.1.0",
     "@ota-meshi/eslint-plugin": "^0.9.0",
+    "@ota-meshi/eslint-plugin-svelte": "^0.34.0",
     "@types/eslint": "^8.4.2",
     "@types/eslint-scope": "^3.7.3",
     "@types/estree": "0.0.51",
@@ -56,7 +67,10 @@
     "@types/node": "^17.0.35",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
+    "assert": "^2.0.0",
+    "astro": "^1.0.0-beta.31",
     "astro-eslint-parser": "^0.1.0",
+    "esbuild": "^0.14.39",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
@@ -71,8 +85,16 @@
     "eslint-plugin-yml": "^1.0.0",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
+    "pako": "^2.0.4",
+    "patch-package": "^6.4.7",
+    "preact": "^10.7.2",
     "prettier": "^2.6.2",
+    "prettier-plugin-svelte": "^2.7.0",
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "remark-emoji": "^3.0.2",
     "rimraf": "^3.0.2",
+    "svelte": "^3.48.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
   }
