--- a/package.json
+++ b/package.json
@@ -20,12 +20,11 @@
     "format-for-gen-file": "eslint src/types-for-node.ts src/utils/rules.ts --fix",
     "new": "ts-node --transpile-only ./tools/new-rule.ts",
     "docs:dev": "astro dev",
-    "docs:build": "astro build",
+    "docs:build": "patch-package && astro build",
     "docs:setup": "node ./docs-build/setup-docs.mjs",
     "docs:preview": "astro preview",
     "preversion": "npm test && git add .",
-    "version": "env-cmd -e version npm run update && git add .",
-    "postinstall": "patch-package"
+    "version": "env-cmd -e version npm run update && git add ."
   },
   "repository": {
     "type": "git",
