--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-regexp": "^1.0.0",
     "eslint-plugin-yml": "^1.0.0",
+    "js-yaml": "^4.1.0",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
     "pako": "^2.0.4",
@@ -86,6 +87,7 @@
     "prettier": "^2.6.2",
     "prettier-plugin-svelte": "^2.7.0",
     "remark-emoji": "^3.0.2",
+    "remark-gfm": "^3.0.1",
     "rimraf": "^3.0.2",
     "svelte": "^3.48.0",
     "ts-node": "^10.7.0",
