--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "esbuild": "^0.14.39",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-astro": "^0.2.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-eslint-plugin": "^4.2.0",
     "eslint-plugin-json-schema-validator": "^3.0.2",
@@ -85,6 +86,7 @@
     "pako": "^2.0.4",
     "patch-package": "^6.4.7",
     "prettier": "^2.6.2",
+    "prettier-plugin-astro": "^0.1.0-0",
     "prettier-plugin-svelte": "^2.7.0",
     "remark-emoji": "^3.0.2",
     "remark-gfm": "^3.0.1",
