--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@ota-meshi/eslint-plugin-svelte": "^0.34.0",
     "@types/eslint": "^8.4.2",
     "@types/eslint-scope": "^3.7.3",
+    "@types/eslint-utils": "^3.0.1",
     "@types/estree": "0.0.51",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.35",
