--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "debug": "mocha --require ts-node/register/transpile-only \"tests/src/**/*.ts\" --reporter dot --timeout 60000",
     "lint": "eslint .",
     "eslint-fix": "eslint . --fix",
-    "update": "ts-node --transpile-only ./tools/update.ts && npm run format-for-gen-file",
-    "format-for-gen-file": "eslint src/types-for-node.ts src/utils/rules.ts --fix",
+    "update": "ts-node --transpile-only ./tools/update.ts",
     "new": "ts-node --transpile-only ./tools/new-rule.ts",
     "docs:dev": "astro dev",
     "docs:build": "patch-package && astro build",
