--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "astro": "^1.0.0-beta.35",
     "astro-eslint-parser": "^0.2.0",
     "env-cmd": "^10.1.0",
-    "esbuild": "^0.14.39",
+    "esbuild": "0.14.39",
     "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-astro": "^0.3.0",
