Add `astro/no-unused-define-vars-in-style` rule

--- a/.github/ISSUE_TEMPLATE/new_rule_request.yml
+++ b/.github/ISSUE_TEMPLATE/new_rule_request.yml
@@ -27,12 +27,12 @@ body:
         ---
         ---
 
-        <!-- ✓ GOOD -->
+        {/* ✓ GOOD */}
         <Foo />
         <Foo />
         <Foo />
 
-        <!-- ✗ BAD -->
+        {/* ✗ BAD */}
         <Foo />
         <Foo />
         <Foo />
