--- a/package.json
+++ b/package.json
@@ -43,12 +43,12 @@
   },
   "homepage": "https://ota-meshi.github.io/eslint-plugin-astro/",
   "dependencies": {
+    "astro-eslint-parser": "^0.2.1",
     "eslint-utils": "^3.0.0",
     "@typescript-eslint/types": "^5.25.0"
   },
   "peerDependencies": {
-    "@typescript-eslint/parser": "^5.25.0",
-    "astro-eslint-parser": "^0.2.0"
+    "eslint": ">=7.0.0"
   },
   "devDependencies": {
     "@astrojs/svelte": "^0.1.3",
@@ -64,7 +64,6 @@
     "@typescript-eslint/parser": "^5.25.0",
     "assert": "^2.0.0",
     "astro": "^1.0.0-beta.35",
-    "astro-eslint-parser": "^0.2.1",
     "env-cmd": "^10.1.0",
     "esbuild": "^0.14.41",
     "eslint": "^8.15.0",
