Add `astro/no-unused-css-selector` rule

--- a/package.json
+++ b/package.json
@@ -43,8 +43,11 @@
   },
   "homepage": "https://ota-meshi.github.io/eslint-plugin-astro/",
   "dependencies": {
+    "@typescript-eslint/types": "^5.25.0",
     "eslint-utils": "^3.0.0",
-    "@typescript-eslint/types": "^5.25.0"
+    "postcss": "^8.4.14",
+    "postcss-selector-parser": "^6.0.10",
+    "sourcemap-codec": "^1.4.8"
   },
   "peerDependencies": {
     "@typescript-eslint/parser": "^5.25.0",
@@ -58,8 +61,10 @@
     "@types/eslint-scope": "^3.7.3",
     "@types/eslint-utils": "^3.0.1",
     "@types/estree": "0.0.51",
+    "@types/less": "^3.0.3",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.35",
+    "@types/stylus": "^0.48.38",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
     "@typescript-eslint/parser": "^5.25.0",
     "assert": "^2.0.0",
@@ -81,16 +86,20 @@
     "eslint-plugin-regexp": "^1.0.0",
     "eslint-plugin-yml": "^1.0.0",
     "js-yaml": "^4.1.0",
+    "less": "^4.1.2",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
     "pako": "^2.0.4",
     "patch-package": "^6.4.7",
+    "postcss-nested": "^5.0.6",
     "prettier": "^2.6.2",
     "prettier-plugin-astro": "^0.1.0-0",
     "prettier-plugin-svelte": "^2.7.0",
     "remark-emoji": "^3.0.2",
     "remark-gfm": "^3.0.1",
     "rimraf": "^3.0.2",
+    "sass": "^1.52.2",
+    "stylus": "^0.58.1",
     "svelte": "^3.48.0",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.4"
