--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
     "sass": "^1.52.2",
     "stylus": "^0.58.1",
     "svelte": "^3.48.0",
-    "ts-node": "^10.7.0",
+    "ts-node": "10.8.0",
     "typescript": "^4.6.4"
   }
 }
