--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -4,7 +4,8 @@
     "tests/**/*",
     "tools/**/*",
     "typings/**/*",
-    "docs-build/src/**/*"
+    "docs-build/src/**/*",
+    "docs/**/*"
   ],
   "compilerOptions": {
     "removeComments": true /* Do not emit comments to output. */
