--- a/.eslintignore
+++ b/.eslintignore
@@ -13,6 +13,7 @@
 /docs-build/shim/assert.mjs
 /docs-build/shim/eslint.mjs
 /docs-build/shim/astro-eslint-parser.mjs
+/docs-build/shim/eslint-plugin-jsx-a11y.mjs
 /tests/fixtures/rules/indent/invalid/ts
 /tests/fixtures/rules/indent/invalid/ts-v5
 /tests/fixtures/rules/valid-compile/invalid/ts
