--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "eslint-plugin-eslint-plugin": "^4.2.0",
     "eslint-plugin-json-schema-validator": "^3.0.2",
     "eslint-plugin-jsonc": "^2.2.1",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-markdown": "^2.2.1",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-node-dependencies": "^0.8.0",
