--- a/.github/workflows/GHPages.yml
+++ b/.github/workflows/GHPages.yml
@@ -22,5 +22,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./docs-build/dist
+          publish_dir: ./docs-build/dist/eslint-plugin-astro
           force_orphan: true
