--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
   "homepage": "https://ota-meshi.github.io/eslint-plugin-astro/",
   "dependencies": {
     "@typescript-eslint/types": "^5.25.0",
-    "astro-eslint-parser": "^0.2.1",
+    "astro-eslint-parser": "^0.3.0",
     "eslint-utils": "^3.0.0",
     "postcss": "^8.4.14",
     "postcss-selector-parser": "^6.0.10",
@@ -55,6 +55,7 @@
     "eslint": ">=7.0.0"
   },
   "devDependencies": {
+    "@astrojs/compiler": "^0.16.1",
     "@astrojs/svelte": "^0.1.3",
     "@ota-meshi/eslint-plugin": "^0.9.0",
     "@ota-meshi/eslint-plugin-svelte": "^0.34.0",
