--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "files": [
     "lib"
   ],
+  "engines": {
+    "node": "^14.17.0 || >=16.0.0"
+  },
   "scripts": {
     "prebuild": "npm run -s clean",
     "build": "npm run build:ts",
