Use eslint-plugin-svelte

--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "@astrojs/compiler": "^0.17.0",
     "@astrojs/svelte": "^0.2.0",
     "@ota-meshi/eslint-plugin": "^0.9.0",
-    "@ota-meshi/eslint-plugin-svelte": "^0.34.0",
     "@types/eslint": "^8.4.2",
     "@types/eslint-scope": "^3.7.3",
     "@types/eslint-utils": "^3.0.1",
@@ -90,6 +89,7 @@
     "eslint-plugin-node-dependencies": "^0.8.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-regexp": "^1.0.0",
+    "eslint-plugin-svelte": "^2.0.0",
     "eslint-plugin-yml": "^1.0.0",
     "js-yaml": "^4.1.0",
     "less": "^4.1.2",
