--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@types/less": "^3.0.3",
     "@types/mocha": "^9.1.1",
     "@types/node": "^17.0.35",
+    "@types/react": "^18.0.15",
     "@types/semver": "^7.3.9",
     "@types/stylus": "^0.48.38",
     "@typescript-eslint/eslint-plugin": "^5.25.0",
