--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "update": "npm run ts -- ./tools/update.ts",
     "new": "npm run ts -- ./tools/new-rule.ts",
     "docs:dev": "astro dev",
-    "docs:build": "patch-package && astro build",
+    "docs:build": "astro build",
     "docs:setup": "node ./docs-build/setup-docs.mjs",
     "docs:preview": "astro preview",
     "preversion": "npm test && git add .",
@@ -101,7 +101,6 @@
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
     "pako": "^2.0.4",
-    "patch-package": "^6.4.7",
     "postcss-nested": "^5.0.6",
     "prettier": "^2.6.2",
     "prettier-plugin-astro": "^0.5.0",
