Update parser and fix an issue where processing hangs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,9 @@
     "outDir": "lib",
     "paths": {
       "*": ["typings/*"]
-    }
+    },
+
+    "skipLibCheck": true
   },
   "include": [
     "src/**/*",
