--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
     "docs:preview": "astro preview",
     "preversion": "npm test && git add .",
     "version": "env-cmd -e version npm run update && git add .",
+    "version:ci": "env-cmd -e version-ci npm run update && changeset version",
+    "prerelease": "npm run build",
+    "release": "changeset publish",
     "ts": "node -r esbuild-register",
     "mocha": "npm run ts -- ./node_modules/mocha/bin/mocha.js"
   },
@@ -63,6 +66,8 @@
     "@astrojs/compiler": "^0.24.0",
     "@astrojs/mdx": "^0.11.0",
     "@astrojs/svelte": "^1.0.0",
+    "@changesets/changelog-github": "^0.4.6",
+    "@changesets/cli": "^2.24.2",
     "@ota-meshi/eslint-plugin": "^0.12.0",
     "@types/eslint": "^8.4.2",
     "@types/eslint-scope": "^3.7.3",
@@ -112,5 +117,8 @@
     "stylus": "^0.59.0",
     "svelte": "^3.48.0",
     "typescript": "^4.6.4"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
