--- a/package.json
+++ b/package.json
@@ -52,12 +52,12 @@
   },
   "homepage": "https://ota-meshi.github.io/eslint-plugin-astro/",
   "dependencies": {
+    "@jridgewell/sourcemap-codec": "^1.4.14",
     "@typescript-eslint/types": "^5.25.0",
     "astro-eslint-parser": "^0.9.0",
     "eslint-utils": "^3.0.0",
     "postcss": "^8.4.14",
-    "postcss-selector-parser": "^6.0.10",
-    "sourcemap-codec": "^1.4.8"
+    "postcss-selector-parser": "^6.0.10"
   },
   "peerDependencies": {
     "eslint": ">=7.0.0"
