--- a/package.json
+++ b/package.json
@@ -52,10 +52,10 @@
   },
   "homepage": "https://ota-meshi.github.io/eslint-plugin-astro/",
   "dependencies": {
+    "@eslint-community/eslint-utils": "^4.2.0",
     "@jridgewell/sourcemap-codec": "^1.4.14",
     "@typescript-eslint/types": "^5.25.0",
     "astro-eslint-parser": "^0.12.0",
-    "eslint-utils": "^3.0.0",
     "postcss": "^8.4.14",
     "postcss-selector-parser": "^6.0.10"
   },
