--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -71,7 +71,7 @@ body:
         Create a minimal reproduction of the problem. **A minimal reproduction is required** so that others can help debug your issue. If a report is vague (e.g. just a generic error message) and has no reproduction, it may be closed.  
         [Why Reproductions are Required](https://antfu.me/posts/why-reproductions-are-required)
 
-        Be sure to share the repo on GitHub. GitHub's repo is ready to debug using Codespace.  
+        Be sure to share the repo on GitHub (or Demo site link). GitHub's repo is ready to debug using Codespace.  
         Please DON'T USE non-GitHub repos such as GitLab as repro.  
         It takes me a long time to prepare my local PC for debugging.  
         Please DON'T USE stackblitz as a repro.  
@@ -80,6 +80,8 @@ body:
         https://github.com/[your]/[repo]
         or
         https://ota-meshi.github.io/eslint-plugin-astro/playground/#[hash]
+        or
+        https://eslint-online-playground.netlify.app/#[hash]
     validations:
       required: true
   - type: textarea
