--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -22,7 +22,7 @@ jobs:
           node-version: 16
 
       - name: Install Dependencies
-        run: npm install
+        run: npm install --legacy-peer-deps
 
       - name: Create Release Pull Request or Publish to npm
         id: changesets
