--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "es2015",
-    "module": "commonjs",
+    "module": "Node16",
     "moduleResolution": "Node16",
     "lib": ["es2020", "dom"],
     "allowJs": true,
