--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "@jridgewell/sourcemap-codec": "^1.4.14",
     "@typescript-eslint/types": "^5.25.0",
     "astro-eslint-parser": "^0.16.0",
+    "eslint-compat-utils": "^0.1.2",
     "postcss": "^8.4.14",
     "postcss-selector-parser": "^6.0.10"
   },
