--- a/.github/ISSUE_TEMPLATE/bug_report.yml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yml
@@ -68,7 +68,7 @@ body:
     attributes:
       label: Link to Minimal Reproducible Example
       description: |
-        Create a minimal reproduction of the problem. **A minimal reproduction is required** so that others can help debug your issue. If a report is vague (e.g. just a generic error message) and has no reproduction, it may be closed.  
+        Create a minimal reproduction of the problem. **A minimal reproduction is required** so that others can help debug your issue. If a report has no reproduction, it may be automatically closed.  
         [Why Reproductions are Required](https://antfu.me/posts/why-reproductions-are-required)
 
         Be sure to share the repo on GitHub (or Demo site link). GitHub's repo is ready to debug using Codespace.  
