chore: add format workflow

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,8 +29,8 @@
   "vetur.validation.script": false,
   "vetur.validation.style": false,
   "editor.codeActionsOnSave": {
-    "source.fixAll": true,
-    "source.fixAll.stylelint": true
+    "source.fixAll": "explicit",
+    "source.fixAll.stylelint": "explicit"
   },
   "svelte.plugin.typescript.diagnostics.enable": false
 }
