--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@astrojs/svelte": "^5.0.0",
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.24.2",
+    "@eslint/eslintrc": "^3.0.0",
     "@ota-meshi/eslint-plugin": "^0.15.0",
     "@types/eslint": "^8.4.2",
     "@types/eslint-scope": "^3.7.3",
