--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "@astrojs/svelte": "^5.0.0",
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.24.2",
+    "@eslint/eslintrc": "^3.0.0",
     "@ota-meshi/eslint-plugin": "^0.15.0",
     "@types/eslint": "^8.4.2",
     "@types/eslint-scope": "^3.7.3",
@@ -93,7 +94,7 @@
     "eslint-plugin-astro": "^0.31.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-eslint-plugin": "^5.0.0",
-    "eslint-plugin-json-schema-validator": "^4.0.0",
+    "eslint-plugin-json-schema-validator": "^4.8.1",
     "eslint-plugin-jsonc": "^2.2.1",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-markdown": "^3.0.0",
