--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "@typescript-eslint/types": "^5.25.0",
     "astro-eslint-parser": "^0.16.3",
     "eslint-compat-utils": "^0.4.0",
+    "globals": "^13.0.0",
     "postcss": "^8.4.14",
     "postcss-selector-parser": "^6.0.10"
   },
