--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "update": "npm run ts -- ./tools/update.ts",
     "new": "npm run ts -- ./tools/new-rule.ts",
     "docs:dev": "astro dev",
-    "docs:build": "astro build",
+    "docs:build": "npx -y patch-package && astro build",
     "docs:setup": "node ./docs-build/setup-docs.mjs",
     "docs:preview": "astro preview",
     "preversion": "npm test && git add .",
@@ -66,7 +66,7 @@
   },
   "devDependencies": {
     "@astrojs/compiler": "^2.0.0",
-    "@astrojs/mdx": "^2.0.0",
+    "@astrojs/mdx": "^2.2.0",
     "@astrojs/svelte": "^5.0.0",
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.24.2",
@@ -85,7 +85,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "assert": "^2.0.0",
-    "astro": "^4.0.0",
+    "astro": "~4.5.0",
     "env-cmd": "^10.1.0",
     "esbuild": "^0.20.0",
     "esbuild-register": "^3.3.3",
