feat: add support for flat config (#324)
* feat: add support for flat config

* Create silly-balloons-double.md

* fix

* fix

--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "@jridgewell/sourcemap-codec": "^1.4.14",
     "@typescript-eslint/types": "^5.25.0",
     "astro-eslint-parser": "^0.16.3",
-    "eslint-compat-utils": "^0.4.0",
+    "eslint-compat-utils": "^0.5.0",
+    "globals": "^13.0.0",
     "postcss": "^8.4.14",
     "postcss-selector-parser": "^6.0.10"
   },
