Revert "chore: patch Astro to avoid site build errors" (#329)
* Revert "chore: patch Astro to avoid site build errors (#325)"

This reverts commit c98c0ce434c7c93afe5be24cdc46bc4b0673d818.

* Apply suggestions from code review

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "update": "npm run ts -- ./tools/update.ts",
     "new": "npm run ts -- ./tools/new-rule.ts",
     "docs:dev": "astro dev",
-    "docs:build": "npx -y patch-package && astro build",
+    "docs:build": "astro build",
     "docs:setup": "node ./docs-build/setup-docs.mjs",
     "docs:preview": "astro preview",
     "preversion": "npm test && git add .",
@@ -86,7 +86,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "assert": "^2.0.0",
-    "astro": "~4.5.0",
+    "astro": "^4.5.0",
     "env-cmd": "^10.1.0",
     "esbuild": "^0.20.0",
     "esbuild-register": "^3.3.3",
