--- a/.github/workflows/NodeCI.yml
+++ b/.github/workflows/NodeCI.yml
@@ -12,10 +12,8 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
-        with:
-          node-version: 18
       - name: Install Packages
-        run: npm install --legacy-peer-deps
+        run: npm install -f
       - name: build
         run: |
           npm run build
@@ -29,7 +27,7 @@ jobs:
       - uses: actions/setup-node@v4
       - name: Install And Build
         run: |+
-          npm install --legacy-peer-deps
+          npm install -f
           npm run update
           npm run build
           export NODE_OPTIONS="--max-old-space-size=8192"
@@ -38,7 +36,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [18.x, 20.x]
+        node-version: [18.x, 20.x, 22.x]
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
@@ -46,7 +44,7 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install Packages
-        run: npm install --legacy-peer-deps
+        run: npm install -f
       - name: Test
         run: npm test
   test-for-eslint-v9:
@@ -57,17 +55,17 @@ jobs:
         uses: actions/setup-node@v4
       - name: Install eslint v9
         run: |+
-          npm i -D eslint@^9.0.0-0 --legacy-peer-deps
+          npm i -D eslint@^9.0.0 -f
           npx rimraf node_modules
       - name: Install Packages
-        run: npm install --legacy-peer-deps
+        run: npm install -f
       - name: Test
         run: npm test
   test-for-eslint-v7:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node-version: [14.x]
+        node-version: [18.x]
     steps:
       - uses: actions/checkout@v4
       - name: Use Node.js ${{ matrix.node-version }}
@@ -76,45 +74,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: Install eslint v7
         run: |+
-          npm i -D eslint@7 @typescript-eslint/parser@5 --legacy-peer-deps
-          npx rimraf node_modules
-      - name: Install Packages
-        run: npm install --legacy-peer-deps
-      - name: Test
-        run: npm test
-  test-for-node-v14:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [14.x]
-    steps:
-      - uses: actions/checkout@v4
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Install @typescript-eslint/parser v5
-        run: |+
-          npm i -D @typescript-eslint/parser@5 eslint@8 -f
-          npx rimraf node_modules
-      - name: Install Packages
-        run: npm install -f
-      - name: Test
-        run: npm test
-  test-for-node-v16:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [16.x]
-    steps:
-      - uses: actions/checkout@v4
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-      - name: Install eslint v8
-        run: |+
-          npm i -D eslint@8 -f
+          npm i -D eslint@7 @typescript-eslint/parser@5 -f
           npx rimraf node_modules
       - name: Install Packages
         run: npm install -f
@@ -126,10 +86,10 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
       - name: Install Packages
-        run: npm install --legacy-peer-deps
+        run: npm install -f
       - name: Test
         run: npm run cover
       - name: Coveralls GitHub Action
-        uses: coverallsapp/github-action@3dfc5567390f6fa9267c0ee9c251e4c8c3f18949 # v2.2.3
+        uses: coverallsapp/github-action@v2.2.3
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
