--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "target": "es2015",
-    "module": "Node16",
-    "moduleResolution": "Node16",
+    "module": "preserve",
+    "moduleResolution": "Bundler",
     "lib": ["es2020", "dom"],
     "allowJs": true,
     "checkJs": true,
@@ -25,7 +25,10 @@
     },
 
     "skipLibCheck": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
+    "allowImportingTsExtensions": true,
+    "noEmit": true
   },
   "include": [
     "src/**/*",
@@ -37,7 +40,8 @@
     "docs-build/src/**/*.astro",
     "docs-build/src/**/*.svelte",
     "docs/**/*.astro",
-    "typings/**/*"
+    "typings/**/*",
+    "tsup.config.ts"
   ],
   "exclude": ["lib/**/*", "tests/fixtures/**/*"]
 }
