--- a/package.json
+++ b/package.json
@@ -4,6 +4,13 @@
   "description": "ESLint plugin for Astro component",
   "main": "lib/index.js",
   "module": "lib/index.mjs",
+  "exports": {
+    ".": {
+      "import": "./lib/index.mjs",
+      "require": "./lib/index.js"
+    },
+    "./package.json": "./package.json"
+  },
   "files": [
     "lib"
   ],
