--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -22,6 +22,9 @@ jobs:
       - name: Install Dependencies
         run: npm install -f
 
+      - name: Build
+        run: npm run build
+
       - name: Create Release Pull Request or Publish to npm
         id: changesets
         uses: changesets/action@v1
