chore: fix script

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "npm run build:meta && npm run build:tsup",
     "build:meta": "npm run ts -- ./tools/update-meta.ts",
     "build:tsup": "tsup",
-    "clean": "rimraf lib .nyc_output dist coverage",
+    "clean": "rimraf .nyc_output dist coverage",
     "test": "npm run mocha -- \"tests/src/**/*.ts\" --reporter dot --timeout 60000 && npm run test:type",
     "test:type": "tsc --noEmit",
     "cover": "nyc --reporter=lcov npm run test",
