chore: minor refactor and add integration test

--- a/.gitignore
+++ b/.gitignore
@@ -108,3 +108,4 @@ dist
 /docs-build/shim/eslint.mjs
 /docs-build/shim/astro-eslint-parser.mjs
 /docs-build/shim/eslint-plugin-jsx-a11y.mjs
+/tests/fixtures/integration/**/actual.json
