--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "build:tsup": "tsup",
     "clean": "rimraf .nyc_output dist coverage",
     "test": "npm run mocha -- \"tests/src/**/*.ts\" --reporter dot --timeout 60000 && npm run test:type",
+    "test:integration": "npm run build && npm run test:integration-wo-build",
+    "test:integration-wo-build": "npm run mocha -- \"tests/integration/**/*.ts\" --reporter dot --timeout 60000",
     "test:type": "tsc --noEmit",
     "cover": "nyc --reporter=lcov npm run test",
     "debug": "npm run mocha -- \"tests/src/**/*.ts\" --reporter dot --timeout 60000",
