--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
   "dependencies": {
     "@eslint-community/eslint-utils": "^4.2.0",
     "@jridgewell/sourcemap-codec": "^1.4.14",
-    "@typescript-eslint/types": "^7.7.1",
+    "@typescript-eslint/types": "^7.7.1 || ^8",
     "astro-eslint-parser": "^1.0.2",
     "eslint-compat-utils": "^0.5.0",
     "globals": "^15.0.0",
@@ -96,8 +96,8 @@
     "@types/react": "^18.0.15",
     "@types/semver": "^7.3.9",
     "@types/stylus": "^0.48.38",
-    "@typescript-eslint/eslint-plugin": "^7.7.1",
-    "@typescript-eslint/parser": "^7.7.1",
+    "@typescript-eslint/eslint-plugin": "^8.5.0",
+    "@typescript-eslint/parser": "^8.5.0",
     "assert": "^2.0.0",
     "astro": "^4.5.0",
     "env-cmd": "^10.1.0",
@@ -105,7 +105,7 @@
     "esbuild-register": "^3.3.3",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.0.0",
-    "eslint-plugin-astro": "^1.0.2",
+    "eslint-plugin-astro": "^1.2.3",
     "eslint-plugin-eslint-plugin": "^6.0.0",
     "eslint-plugin-jsdoc": "^50.0.0",
     "eslint-plugin-json-schema-validator": "^5.0.0",
@@ -136,7 +136,7 @@
     "svelte": "^4.0.0",
     "tsup": "^8.0.2",
     "typescript": "~5.4.0",
-    "typescript-eslint": "^7.5.0",
+    "typescript-eslint": "^8.5.0",
     "vite-plugin-eslint4b": "^0.4.0"
   },
   "publishConfig": {
