--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "eslint": ">=8.57.0"
   },
   "devDependencies": {
+    "@actions/github": "^6.0.0",
     "@astrojs/compiler": "^2.0.0",
     "@astrojs/mdx": "^4.0.0",
     "@astrojs/svelte": "^7.0.0",
