--- a/.gitignore
+++ b/.gitignore
@@ -109,3 +109,4 @@ dist
 /docs-build/shim/astro-eslint-parser.mjs
 /docs-build/shim/eslint-plugin-jsx-a11y.mjs
 /tests/fixtures/integration/**/actual.json
+/.astro/
