--- a/.github/workflows/NodeCI.yml
+++ b/.github/workflows/NodeCI.yml
@@ -6,6 +6,11 @@ on:
   pull_request:
     branches: [main]
 
+# Allow one concurrent deployment
+concurrency:
+  group: ${{ github.workflow }}-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   lint:
     runs-on: ubuntu-latest
@@ -47,6 +52,8 @@ jobs:
         run: npm install -f
       - name: Test
         run: npm test
+      - name: Type Test
+        run: npm run test:type
   test-for-eslint-v8:
     runs-on: ubuntu-latest
     steps:
