--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -15,7 +15,7 @@ concurrency:
 jobs:
   release:
     # prevents this action from running on forks
-    if: github.repository == 'ota-meshi/eslint-plugin-markdown-preferences'
+    if: github.repository == 'ota-meshi/eslint-plugin-astro'
     permissions:
       contents: write # to create release (changesets/action)
       id-token: write # OpenID Connect token needed for provenance
@@ -25,12 +25,16 @@ jobs:
     steps:
       - name: Checkout Repo
         uses: actions/checkout@v5
+        with:
+          # This makes Actions fetch all Git history so that Changesets can generate changelogs with the correct commits
+          fetch-depth: 0
+
       - name: Setup Node.js
         uses: actions/setup-node@v6
         with:
           node-version: "24"
       - name: Install Dependencies
-        run: npm install
+        run: npm install -f
       - name: Build
         run: npm run build
 
