--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
   },
   "scripts": {
     "prebuild": "npm run -s clean",
-    "build": "npm run build:meta && npm run build:tsup",
+    "build": "npm run build:meta && npm run build:tsdown",
     "build:meta": "npm run ts -- ./tools/update-meta.ts",
-    "build:tsup": "tsup",
+    "build:tsdown": "tsdown",
     "clean": "rimraf .nyc_output dist coverage",
     "test": "npm run mocha -- \"tests/src/**/*.ts\" --reporter dot --timeout 60000",
     "test:integration": "npm run build && npm run test:integration-wo-build",
@@ -87,7 +87,6 @@
     "@eslint/eslintrc": "^3.0.0",
     "@eslint/js": "^9.0.0",
     "@ota-meshi/eslint-plugin": "^0.18.0",
-    "@types/eslint": "^9.0.0",
     "@types/eslint-scope": "^8.0.0",
     "@types/eslint-utils": "^3.0.1",
     "@types/estree": "1.0.8",
@@ -135,7 +134,7 @@
     "sass": "^1.52.2",
     "stylus": "^0.64.0",
     "svelte": "^5.0.0",
-    "tsup": "^8.0.2",
+    "tsdown": "^0.15.11",
     "typescript": "~5.9.0",
     "typescript-eslint": "^8.5.0",
     "vite-plugin-eslint4b": "^0.6.0"
