--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   },
   "scripts": {
     "prebuild": "npm run -s clean",
-    "build": "npm run build:meta && npm run build:tsdown",
-    "build:meta": "npm run ts -- ./tools/update-meta.ts",
+    "build": "npm run build:tsdown",
     "build:tsdown": "tsdown",
     "clean": "rimraf .nyc_output dist coverage",
     "test": "npm run mocha -- \"tests/src/**/*.ts\" --reporter dot --timeout 60000",
@@ -38,8 +37,8 @@
     "docs:setup": "node ./docs-build/setup-docs.mjs",
     "docs:preview": "astro preview",
     "preversion": "npm test && git add .",
-    "version": "env-cmd -e version npm run update && git add .",
-    "version:ci": "env-cmd -e version-ci npm run update && changeset version",
+    "version": "env-cmd -e version -- npm run update && git add .",
+    "version:ci": "changeset version && env-cmd -e version -- npm run update && git add --all",
     "prerelease": "npm run build",
     "release": "changeset publish",
     "ts": "node -r esbuild-register",
