chore: use tsdown and isolatedDeclarations (#509)
* chore: use tsdown and isolatedDeclarations

* update

* fix

* refactor: replace plugin import with getPlugin function for lazy loading

* update

* Create spotty-kangaroos-shake.md

--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
   },
   "scripts": {
     "prebuild": "npm run -s clean",
-    "build": "npm run build:meta && npm run build:tsup",
-    "build:meta": "npm run ts -- ./tools/update-meta.ts",
-    "build:tsup": "tsup",
+    "build": "npm run build:tsdown",
+    "build:tsdown": "tsdown",
     "clean": "rimraf .nyc_output dist coverage",
     "test": "npm run mocha -- \"tests/src/**/*.ts\" --reporter dot --timeout 60000",
     "test:integration": "npm run build && npm run test:integration-wo-build",
@@ -38,8 +37,8 @@
     "docs:setup": "node ./docs-build/setup-docs.mjs",
     "docs:preview": "astro preview",
     "preversion": "npm test && git add .",
-    "version": "env-cmd -e version npm run update && git add .",
-    "version:ci": "env-cmd -e version-ci npm run update && changeset version",
+    "version": "env-cmd -e version -- npm run update && git add .",
+    "version:ci": "changeset version && env-cmd -e version -- npm run update && git add --all",
     "prerelease": "npm run build",
     "release": "changeset publish",
     "ts": "node -r esbuild-register",
@@ -87,7 +86,6 @@
     "@eslint/eslintrc": "^3.0.0",
     "@eslint/js": "^9.0.0",
     "@ota-meshi/eslint-plugin": "^0.18.0",
-    "@types/eslint": "^9.0.0",
     "@types/eslint-scope": "^8.0.0",
     "@types/eslint-utils": "^3.0.1",
     "@types/estree": "1.0.8",
@@ -135,7 +133,7 @@
     "sass": "^1.52.2",
     "stylus": "^0.64.0",
     "svelte": "^5.0.0",
-    "tsup": "^8.0.2",
+    "tsdown": "^0.16.0",
     "typescript": "~5.9.0",
     "typescript-eslint": "^8.5.0",
     "vite-plugin-eslint4b": "^0.6.0"
